--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,241 @@ button {
     left : 10%;
     
   }
+
+
+  
+/*
+기본 배치
+- <div class="container"> : 사이드바가 표시되는 화면
+- <div class="container collapse"> : 사이드바가 숨겨지는 화면
+*/
+
+.container {
+  position: relative;
+}
+
+.container>.sidebar {
+  background-color: #ffeaa7;
+
+  /* sidebar는 화면을 기준으로 배치 */
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 15rem;
+
+  padding: 1rem;
+
+  z-index: 9999;
+}
+#menu_te{
+  color : black;
+  font-size : 20px;
+}
+.container>.contents {
+  background-color: #74b9ff;
+
+  /* contents는 메인페이지(.container)를 기준으로 배치 */
+  position: absolute;
+  left: 15rem;
+  right: 0;
+  top: 0;
+
+  padding: 1rem;
+}
+
+/*
+숨김 상태의 처리
+- 사이드바는 화면 밖으로 이동시킴
+- 컨텐츠영역은 사이드바가 사라진 자리를 채움
+*/
+.container.collapse {}
+
+.container.collapse>.sidebar {
+  margin-left:-15rem;
+}
+
+.container.collapse>.contents {
+  left:0;
+}
+
+/* 부드럽게 이동하도록 transition 처리 */
+.container > .sidebar {
+  transition-property: margin-left;
+  transition-duration:0.3s;
+  transition-timing-function: linear;
+}
+.container > .contents {
+  transition-property:left, padding-left;
+  transition-duration:0.3s;
+  transition-timing-function:linear;
+}
+
+/* 
+메뉴 버튼 디자인
+- 화면에 고정하고 모든 화면보다 우선 표시되도록 처리
+*/
+.container > .sidebar > .toggle {
+  position:fixed;
+  top:1rem;
+  left:1rem;
+  z-index:100000;
+
+  display:flex;
+  justify-content: center;
+  align-items: center;
+
+  width:2.5rem;
+  height:2.5rem;
+
+  border:3px solid white;
+}
+
+.container.collapse > .sidebar > .toggle{}
+
+/* 
+메뉴와 화면이 겹치는 현상을 해결하기 위해 스타일 추가 
+- 사이드바는 상단 여백을 부여
+- 컨텐츠영역은 좌측 여백을 숨김 상태일 경우 부여(transition 설정)
+*/
+.container > .sidebar {
+  padding-top: 4.5rem;
+}
+.container.collapse > .contents {
+  padding-left: 4.5rem;
+}
+
+/*
+메뉴를 더 잘 보이도록 변경
+- span 3개를 배치하여 디자인 부여
+*/
+.container > .sidebar > .toggle > span {
+  position:absolute;
+
+  width:80%;
+  height:10%;
+
+  background-color: white;
+}
+
+/*
+<div class="container"> 일 경우 메뉴 모양을 표시
+<div class="container collapse"> 일 경우 x 모양을 표시
+*/
+.container > .sidebar > .toggle > span:nth-child(1){
+  top:50%;
+  left:0%;
+  width:100%;
+  transform:translateY(-50%) rotate(45deg);
+}
+.container > .sidebar > .toggle > span:nth-child(2){
+  display:none;
+}
+.container > .sidebar > .toggle > span:nth-child(3){
+  top:50%;
+  left:0%;
+  width:100%;
+  transform:translateY(-50%) rotate(-45deg);
+}
+
+.container.collapse > .sidebar > .toggle > span:nth-child(1){
+  top:15%;
+  left:10%;
+  width:80%;
+  transform:none;
+}
+.container.collapse > .sidebar > .toggle > span:nth-child(2){
+  top:50%;
+  left:10%;
+  transform:translateY(-50%);
+  display:block;
+}
+.container.collapse > .sidebar > .toggle > span:nth-child(3){
+  top:85%;
+  left:10%;
+  width:80%;
+  transform:translateY(-100%);
+}
+
+/* 부드럽게 처리 */
+.container > .sidebar > .toggle > span {
+  transition:all 0.3s linear;
+}
+
+
+ /* 슬라이드 컨테이너 스타일 */
+ .slideshow-container {
+  position: relative;
+  max-width: 1520px;
+  margin: auto;
+}
+
+/* 이미지 슬라이드 스타일 */
+.mySlides {
+  display: none;
+}
+
+/* 이전/다음 버튼 스타일 */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* 다음 버튼 위치 */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* 버튼에 마우스를 올렸을 때 스타일 */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+.popup_window {
+  display : none;
+  position: absolute;
+  z-index: 3;
+  top: 150px;
+  left: 400px;
+}
+.popup_content {
+  width: 400px;
+  height: 250px;
+  padding: 20px;
+  background: white;
+  border: 5px solid #30a3f3;
+}
+.popup_top {
+  height: 90%;
+  color : #333333;
+}
+.popup_top h3 {
+  color: #30a3f3;
+  height: 40px;
+}
+.팝업닫기 {
+  background-color: #333333;
+  color: white;
+  border: none;
+  padding: 10px 30px;
+  text-align: center;
+  font-size: 14px;
+  cursor: pointer;
+  left : -4px;
+  position: absolute;
+}
+.팝업버튼 {
+  cursor: pointer;
+}
